@startuml
!include .ClassDiagram.config
'https://plantuml.com/class-diagram

class CourseValidator {
    -logger: Logger {static}
    +isValidCourseMapping(nusCourseInput: String, puCourseInput: String, courses: JsonArray,pu: String): boolean
    +getPUCourseList(pu: String, jsonObject: JsonObject): JsonArray
    +isValidInput(nusCourseInput: String, pu: String, puCourseInput: String, jsonObject: JsonObject): boolean
}

class UI{
    -logger: Logger {static}
    +displayPartnerUniversities(): void
    +printAddMessage(course:Course): void
    +displayAvailableMappings(courses:JsonArray, pu String): void
}

class AddCoursesCommand as "AddCoursesCommand" extends PersonalTrackerCommand {
    -logger: Logger {static}
    -courseValidator: CourseValidator
    +execute(userInput: String, storage, Storage): void
}

abstract class PersonalTrackerCommand as "{abstract} \nPersonalTrackerCommand" extends Command{
    +execute(userInput: String,storage: Storage)
}

abstract class Command as "{abstract} \nCommand"{
    +createJsonObject()
}

AddCoursesCommand ..> UI
CourseValidator ..> UI
AddCoursesCommand --> "courseValidator 1" CourseValidator

@enduml